<resources>
    <string name="app_name">ViewAnimation</string>
    <string name="button_text_start_alpha_animation">Start Alpha Ani</string>
    <string name="button_text_start_rotate_animation">Start Rotate Ani</string>
    <string name="button_text_start_scale_animation">Start Scale Ani</string>
    <string name="button_text_start_translate_animation">Start Translate Ani</string>
    <string name="button_text_start_group_animation">Start Group Ani</string>
    <string name="button_text_start_tremble_animation">Start Tremble Ani</string>
    <string name="button_text_start_tv_close_animation">Start Tv Close Ani</string>
    <string name="button_text_start_custom_animation">Start Custom Ani</string>
</resources>
