<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_start_alpha_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_alpha_animation"/>
    <Button
        android:id="@+id/btn_start_rotate_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_rotate_animation"/>
    <Button
        android:id="@+id/btn_start_scale_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_scale_animation"/>
    <Button
        android:id="@+id/btn_start_translate_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_translate_animation"/>
    <Button
        android:id="@+id/btn_start_group_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_group_animation"/>
    <Button
        android:id="@+id/btn_start_tremble_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_tremble_animation"/>
    <Button
        android:id="@+id/btn_start_tv_close_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_tv_close_animation"/>
    <Button
        android:id="@+id/btn_start_custom_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/button_text_start_custom_animation"/>

</LinearLayout>